--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,6 @@ header {
 
 .header-logo {
     display: flex;
-    align-items: center;
     gap: 2rem;
 }
 
@@ -47,7 +46,6 @@ header {
     overflow: hidden;
     position: relative;
     display: flex;
-    align-items: center;
 }
 
 .logo {
@@ -374,6 +372,13 @@ strong {
     .container {
         padding: 1rem;
     }
+
+    .logo {
+
+    }
+    .logo-container {
+        width: auto;
+    }
 }
 
 /* Сообщение об успешной отправке */
@@ -399,7 +404,6 @@ strong {
 .logo-image {
     max-height: 120px;
     display: flex;
-    align-items: center;
 }
 
 .logo-image img {
@@ -425,4 +429,32 @@ strong {
     font-weight: 600;
     color: var(--heading-color);
     margin-bottom: 1.2rem;
+}
+
+/* Добавляем медиа-запрос для очень маленьких экранов */
+@media (max-width: 400px) {
+    .header-logo {
+        flex-direction: column;
+        gap: 1rem; /* Добавляем отступ между элементами */
+    }
+
+    .logo-image img {
+        height: 70px; /* Уменьшаем высоту картинки */
+    }
+
+    .logo-image {
+      max-height: 80px; /* Уменьшаем максимальную высоту контейнера картинки */
+    }
+
+    .logo {
+       /* Корректируем clamp для очень маленьких экранов */
+       font-size: clamp(65px, 15vw, 50px);
+       margin-top: 0;
+    }
+
+    .logo-container {
+        height: auto; /* Автоматическая высота для контейнера текста */
+        width: 100%; /* Занимаем всю ширину */
+        margin-bottom: 0.5rem; /* Небольшой отступ снизу */
+    }
 }
