--- a/views/index.erb
+++ b/views/index.erb
@@ -97,7 +97,7 @@
                     <p>Want to dive deeper into our approach? Select up to 2 guides that interest you most, and we'll send them straight to your inbox.</p>
 
                     <form id="resource-form" class="resource-form">
-                        <h4 class="form-title">Choose your Rails guides</h4>
+                        <h4 class="form-title">Choose your guides</h4>
                         <div class="checkbox-group">
                             <div class="checkbox-item">
                                 <input type="checkbox" id="guide-1" name="selected_guides" value="painless-rails-guide">
