Update landing page

--- a/views/index.erb
+++ b/views/index.erb
@@ -61,7 +61,7 @@
 
                 <h3 class="sub-heading">We Don't Reinvent Wheels</h3>
                 <p>We use a standardized approach for key features like activity tracking, permissions, search and filtering, mass operations, import/export, reporting, and any kind of third-party integrations.</p>
-                <p>Whenever possible, we rely on ready-made services like <a href="https://www.apideck.com/">ApiDeck</a>, <a href="https://csvbox.io/">CsvBox</a>, <a href="https://smartcar.com/">SmartCar</a> and <a href="https://imgproxy.net/">Imgproxy</a> to save weeks of developer time.</p>
+                <p>Whenever possible, we rely on ready-made services like ApiDeck, CsvBox, SmartCar and Imgproxy to save weeks of developer time.</p>
 
                 <h3 class="sub-heading">We Don't Push Against Rails Conventions</h3>
                 <p>We don't fight Rails or reinvent its core components. On the contrary, we double down on what Rails does best and add our own building blocks on top to manage complexity more efficiently.</p>
@@ -116,8 +116,8 @@
                                 <label for="guide-4">Services to Cut Build Time</label>
                             </div>
                             <div class="checkbox-item">
-                                <input type="checkbox" id="guide-5" name="selected_guides" value="rails-application-journey">
-                                <label for="guide-5">Your Rails Application Journey</label>
+                                <input type="checkbox" id="guide-5" name="selected_guides" value="rails-application-lifecycle">
+                                <label for="guide-5">Your Rails Application Lifecycle</label>
                             </div>
                         </div>
                         <p class="selection-hint">You selected 0 of 2 guides</p>
