Update landing page

--- a/views/index.erb
+++ b/views/index.erb
@@ -25,18 +25,6 @@
     <div class="col">
         <h2 class="heading">Our Philosophy & Approach</h2>
 
-        <h3 class="sub-heading">We Practice Painless Rails</h3>
-        <p>A best-in-class approach to Ruby on Rails that goes beyond mere code-organization conventions. It's a comprehensive methodology backed by a strong guiding philosophy.</p>
-
-        <h3 class="sub-heading">We Own Every Decision</h3>
-        <p>We're deliberate in our choices. For every piece of technology we adopt, we can explain why it's there; for everything we skip, we can explain why it's not.</p>
-        <ul>
-            <li>We <strong>don't</strong> do: microservices, service objects, callbacks, mocks, monads, e2e browser tests.</li>
-            <li>We <strong>don't</strong> care about code coverage.</li>
-            <li>We prefer: minitest, fixtures, hotwire, kamal,</li>
-            <li>We practice: Painless Rails, Application Layer, Modern Make.</li>
-        </ul>
-
         <h3 class="sub-heading">We Don't Reinvent Wheels</h3>
         <p>We use a standardized approach for key features like activity tracking, permissions, search and filtering, mass operations, import/export, reporting, and any kind of third-party integrations.</p>
         <p>Whenever possible, we rely on ready-made services like ApiDeck, CsvBox, SmartCar and Imgproxy to save weeks of developer time.</p>
@@ -46,6 +34,15 @@
 
         <h3 class="sub-heading">Designed to Last</h3>
         <p>We know how to tackle the common Rails pitfalls. Our approach imposes minimal overhead (you can adopt it from day one) and lays a foundation that spares you from growth-related issues—even at the scale of hundreds of models. In contrast, many projects start running into problems at just 50–100 models.</p>
+
+        <h3 class="sub-heading">We Own Every Decision</h3>
+        <p>We're deliberate in our choices. For every piece of technology we adopt, we can explain why it's there; for everything we skip, we can explain why it's not.</p>
+        <ul>
+            <li>We <strong>don't</strong> do: microservices, service objects, callbacks, mocks, monads, e2e browser tests.</li>
+            <li>We <strong>don't</strong> care about code coverage.</li>
+            <li>We prefer: minitest, fixtures, hotwire, kamal,</li>
+            <li>We practice: Painless Rails methodology, Application Layer, Modern Make.</li>
+        </ul>
     </div>
 </section>
 
