--- a/views/index.erb
+++ b/views/index.erb
@@ -41,7 +41,7 @@
             <li>We <strong>don't</strong> do: microservices, service objects, callbacks, mocks, monads, e2e browser tests.</li>
             <li>We <strong>don't</strong> care about code coverage.</li>
             <li>We prefer: minitest, fixtures, hotwire, kamal,</li>
-            <li>We practice: Painless Rails methodology, Application Layer, Modern Make.</li>
+            <li>We practice: Painless Rails, Application Layer, Modern Make.</li>
         </ul>
     </div>
 </section>
